--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: home
-title: BLOG
-description: "CodeInventory"
-headline: Nerds Feeder
-tags: [Amey, Jadiye, CodeInvemtory]
+title: NECROBOT2
+description: "The opensource C# Pokemon GO Bot"
+headline: HOME
+tags: [Necrobot2]
 ---
 {% if site.paginate %}
 	{% for post in paginator.posts %}
