remove all old articles

--- a/documents.html
+++ b/documents.html
@@ -1,4 +1,4 @@
---- layout: page title: Documents Index permalink: /documents/index.html title: Documents Index tags: [Documents] description: "An archive of posts sorted by categories." ---
+--- layout: page title: Documents Index permalink: /documents/index.html title: Documents Index tags: [Documents] description: "1An archive of posts sorted by categories." ---
 
 <ul class="tag-box inline">
     {% assign tags_list = site.categories %} {% if tags_list.first[0] == null %} {% for tag in tags_list %}
