--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
---- layout: home title: NECROBOT2 description: "The opensource C# Pokemon GO Bot" headline: HOME tags: [Necrobot2] --- {% if site.paginate %} {% for post in paginator.posts %}
+--- 
+layout: home 
+title: NECROBOT2 
+description: "The opensource C# Pokemon GO Bot" 
+headline: HOME 
+tags: [Necrobot2] 
+---
+
 <article class="notepad-index-post post row">
     <div class="small-12 medium-3 large-2 columns datetime">
         <span class="notepad-post-meta">
